	exception.

	* Propagation.py: code improvements to increase maintainability and
	performances. The propagation router has been put as a part of the
	propagation tree. The router's internals have been improved so that
	caching is not necessary anymore. The module now also have a reduced
	exception tree.

	* tests/Propagation.py: updated the tests to adapt to these code
	improvements.

2010-08-03 H. Doreau <henri.doreau@gmail.com>
	* Propagation.py: fixed a bug that disallowed the lib to respect the
	value of the fanout to correctly dispatch tasks within the propagation
	tree.

2010-08-03 H. Doreau <henri.doreau@gmail.com>
	* Propagation.py: Heavily improved the propagation tree router, and
	added the ability for the nodes to mark a host as invalid if this host
	appears to be down. The propagation tree can now be used to simulate
	remote commands execution.

	* tests/PropagationTest.py: Added unit tests to cover these new
	mechanisms.

2010-07-26 H. Doreau <henri.doreau@gmail.com>
	* Topology.py: Decided to skip the topology tree generation phase. In
	place, we only build a complete connections graph that will be used
	for dynamic propagation. Also removed two unused and obsolete methods.

	* tests/TopologyTest.py: Updated the unit test suite for this module to
	deal with these major changes.

	* Propagation.py: Added the base implementation of the dynamic
	propagation tree, and routing mecanism for message passing within the
	propagation tree.

	* tests/PropagationTest.py: Added unit tests for the Propagation module.

2010-07-22 H. Doreau <henri.doreau@gmail.com>
	* Topology.py: Added network topology configuration parser and
	experimental tree generation code.

	* tests/TopologyTest.py: Added unit tests for network topology related
	code.

2010-07-21 S. Thiell <stephane.thiell@cea.fr>

	* Version 1.3 RC 2 released.

	* NodeSet.py: Like in some previous version, support None as argument for
	most methods (trac ticket #106).
